# LIBJPEG_SAMPLE

./: README.md  build.gradle  gradle.properties  jpeg_build.sh  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jpeg-yk.cpp
app/src/main/java/com/yk/libjpeg_sample/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jpeg_app/: build.gradle
jpeg_app/src/androidTest/java/com/yk/libjpeg_sample/: ExampleInstrumentedTest.java
jpeg_app/src/main/: AndroidManifest.xml
jpeg_app/src/main/java/com/ykun/libjpeg_sample/: MainActivity.java
jpeg_app/src/main/res/layout/: activity_main.xml
jpeg_app/src/main/res/values/: strings.xml
jpeg_app/src/test/java/com/yk/libjpeg_sample/: ExampleUnitTest.java
libjpeg_module/: build.gradle
libjpeg_module/src/androidTest/java/com/yk/libjpeg_sample/: ExampleInstrumentedTest.java
libjpeg_module/src/main/: AndroidManifest.xml
libjpeg_module/src/main/java/com/yk/libjpeg_sample/libjpeg/: JpegUtils.java
libjpeg_module/src/main/res/values/: strings.xml
